--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
-.add-todo-button {
+/* .add-todo-button {
   position: fixed;
-  right: -5px;
-  bottom: 0;
+  right: 330px;
+  top: 130px;
   z-index: 100;
-  width: 100px;
-  height: 100px;
+  width: 30px;
+  height: 30px;
   cursor: pointer;
   font-size: 5rem;
-  color: #f67280;
-}
+  color: #5560e9;
+} */
