--- a/src/components/Template.css
+++ b/src/components/Template.css
@@ -1,15 +1,76 @@
+* {
+  box-sizing: border-box;
+}
+
+#root {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .Template {
-  padding-top: 20px;
+  width: 400px;
   max-height: 100vh;
+  position: relative;
 }
 
 .title {
-  width: 90vw;
+  width: 400px;
+  height: 110px;
   margin-left: auto;
   margin-right: auto;
-
-  padding-bottom: 20px;
+  
   font-size: 1.5rem;
-  font-weight: bold;
-  color: #6c567b
+  font-weight: 600;
+  color: #fff;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  background-color: #b4b7f9;
+}
+
+.tasks {
+  position: absolute;
+  font-size: 18px;
+  font-weight: 700;
+  margin-top: 30px;
+  margin-left: 80px;
+}
+
+.tasks-count {
+  position: absolute;
+}
+
+.complete-tasks {
+  display: inline-block;
+  font-size: 50px;
+  padding-top: 25px;
+  width: 70px;
+  height: 110px;
+  text-align: end;
+}
+
+.all-tasks {
+  position: absolute;
+  font-size: 16px;
+  bottom: 35px;
+  margin-left: 10px;
+  width: 30px;
+}
+
+.add-todo-button {
+  position: absolute;
+  z-index: 100;
+  right: 50px;
+  top: 85px;
+  
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+  font-size: 50px;
+  color: #5560e9;
+  background-color: #fff;
+  border-radius: 50%;
+  box-shadow: 1px 2px 5px 1px #d5d6d6;
 }
