--- a/src/components/TodoInsert.css
+++ b/src/components/TodoInsert.css
@@ -2,20 +2,21 @@
   position: fixed;
   z-index: 980;
   top: 0;
+  left: 0;
   overflow: hidden;
   width: 100vw;
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #6c567b;
-  opacity: 0.8;
+  background: #d5d6d6;
+  opacity: 0.4;
 }
 
 form {
-  margin-left: 10%;
   position: fixed;
   top: 40%;
+  left: 36%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,7 +25,7 @@ form {
   width: 300px;
   height: 150px;
   border-radius: 5px;
-  box-shadow: 1px 2px 5px 1px #f67280;
+  box-shadow: 1px 2px 5px 1px #b4b7f9;
   background: white;
 }
 
@@ -32,7 +33,7 @@ form > input {
   background: none;
   outline: none;
   border: none;
-  border-bottom: 1px solid #f67280;
+  border-bottom: 1px solid #b4b7f9;
 
   padding: 0.5rem;
   font-size: 1.125rem;
@@ -44,7 +45,7 @@ form > button {
   background: none;
   outline: none;
   border: none;
-  color: #f67280;
+  color: #b4b7f9;
   padding-left: 1rem;
   padding-right: 1rem;
   font-size: 1.5rem;
@@ -54,9 +55,10 @@ form > button {
   transition: 0.1s background ease-in;
 }
 
-.rewrite > svg {
+.rewrite {
   padding-top: 20px;
-  color: #f67280;
+  z-index: 1000;
+  color: #b4b7f9;
   padding-left: 1rem;
   padding-right: 1rem;
   font-size: 1.5rem;
